controls/C-0016/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "kubescape-c-0016-allow-privilege-escalation"
  labels:
    controlId: "C-0016"
  annotations:
    controlUrl: "https://kubescape.io/docs/controls/c-0016/"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments","replicasets","daemonsets","statefulsets"]
    - apiGroups:   ["batch"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["jobs","cronjobs"]
  variables:
    - expression: |
        object.kind == 'Pod'
          ? object.spec.containers + (has(object.spec.initContainers) ? object.spec.initContainers : []) + (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : [])
          : object.kind in ['Deployment','ReplicaSet','DaemonSet','StatefulSet','Job']
            ? object.spec.template.spec.containers + (has(object.spec.template.spec.initContainers) ? object.spec.template.spec.initContainers : []) + (has(object.spec.template.spec.ephemeralContainers) ? object.spec.template.spec.ephemeralContainers : [])
            : object.kind == 'CronJob'
              ? object.spec.jobTemplate.spec.template.spec.containers + (has(object.spec.jobTemplate.spec.template.spec.initContainers) ? object.spec.jobTemplate.spec.template.spec.initContainers : []) + (has(object.spec.jobTemplate.spec.template.spec.ephemeralContainers) ? object.spec.jobTemplate.spec.template.spec.ephemeralContainers : [])
              : []
      name: containers
  validations:
    - expression: >
        variables.containers.all(container,
          has(container.securityContext) &&
          has(container.securityContext.allowPrivilegeEscalation) &&
          !container.securityContext.allowPrivilegeEscalation
        )
      messageExpression: >
        object.kind + '/' + object.metadata.name + ' has a container with allowPrivilegeEscalation not set to false. (see more at https://kubescape.io/docs/controls/c-0016/)'
